--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -5,11 +5,11 @@ name: Commented Pull Request
 jobs:
   pullRequestHandler:
     name: Pull Request Validator
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
     - name: Pull Request Validation
-      uses: shovel-org/GithubActions@main
+      uses: Ash258/Scoop-GithubActions@stable
       if: startsWith(github.event.comment.body, '/verify')
       env:
         GITH_EMAIL: zhemima@gmail.com
