--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -4,12 +4,12 @@ on:
 name: Issues
 jobs:
   issueHandler:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     name: Issue Verification
     steps:
       - uses: actions/checkout@main
       - name: Verify Issue
-        uses: shovel-org/GithubActions@main
+        uses: Ash258/Scoop-GithubActions@stable
         if: github.event.action == 'opened' || (github.event.action == 'labeled' && contains(github.event.issue.labels.*.name, 'verify'))
         env:
           GITH_EMAIL: zhemima@email.com
